# cg_game2d

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
cg/: cg.py
characters/: cat.py  enemies.py
game/: background.py  characters.py
