[tool.poetry]
name = "cg-game"
version = "0.1.0"
description = "2D game for cg"
authors = ["Erik Bayerlein <erik.bayer@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
numpy = "^2.0.0"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
